--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
 
-html,
-body {
+body,
+html {
   height: 100%;
   margin: 0;
-  display: flex;
-  flex-wrap: wrap;
-  background-image: linear-gradient(120deg, #a18cd1 0%, #fbc2eb 100%);
-  display: flex;
+  display: grid;
+  /* background-image: linear-gradient(to bottom, #a18cd1 0%, #fbc2eb 100%), */
+  /* url("./assets/floor.png"); */
+  background-image: linear-gradient(to bottom, #a18cd1 0%, #fbc2eb 100%);
+
+  /* rgba(161, 140, 209, 0),
+  rgba(251, 194, 235, 1) */
 
   /* flex-wrap: wrap; */
   /* display: flex;
@@ -23,29 +26,28 @@ body {
   width: fit-content;
 }
 
-.meditations {
-  display: flex;
-  flex-wrap: wrap;
-  flex-grow: 4;
+.container {
+  padding-left: 6em;
+  padding-right: 6em;
   margin-left: 33%;
   margin-right: 15%;
-  /* background: url("./assets/floor.png"); */
 }
 
 .statue {
   opacity: 0.9;
-  /* border-radius: 80%; */
   width: 60%;
   height: auto;
 }
 
-/* .floor {
-  width: 100%;
-  height: auto;
-} */
-
 .meditation {
-  /* padding-bottom: 33%; */
   font-family: "VT323";
   font-size: x-large;
+}
+
+.floor {
+  position: absolute;
+  left: 0;
+  top: 0;
+  max-width: 100%;
+  opacity: 0.2;
 }
